	PR 10979 	* script.cc (read_input_script): If we see a new SECTIONS clause, 	and we have added an input section, give an error. 	* layout.h (class Layout): Add have_added_input_section function. 	Add have_added_input_section_ field. 	* layout.cc (Layout::Layout): Initialize 	have_added_input_section_. 	(Layout::layout): Set have_added_input_section_. 	(Layout::layout_eh_frame): Likewise.